[gd_scene format=4 uid="uid://c5hxh0i0l2p4i"]

[ext_resource type="Script" uid="uid://dx0ixuhjfpc27" path="res://level/room/room.gd" id="1_2d5rg"]
[ext_resource type="TileSet" uid="uid://dah4dbx8ikesr" path="res://level/room/tileset_level.tres" id="2_6xuvi"]
[ext_resource type="PackedScene" uid="uid://daei5no6mv7u5" path="res://entity/light/torch_point_light_2d.tscn" id="2_j55g4"]
[ext_resource type="PackedScene" uid="uid://dliyelxwg7x8w" path="res://entity/character/zemerlin/zemerlin.tscn" id="3_j55g4"]
[ext_resource type="PackedScene" uid="uid://bbdbtt4jx6wt8" path="res://entity/door/door_up.tscn" id="5_j55g4"]
[ext_resource type="PackedScene" uid="uid://db81vgbcmwuoq" path="res://entity/breakable_wall/breakable_wall_side.tscn" id="5_k6nox"]
[ext_resource type="PackedScene" uid="uid://dk62nei0etksf" path="res://entity/character/medusa/medusa.tscn" id="6_te4wc"]
[ext_resource type="PackedScene" uid="uid://c1rdx6jk7oibd" path="res://entity/door/door_left.tscn" id="7_2d5rg"]
[ext_resource type="PackedScene" uid="uid://dnb6xxaiufcqp" path="res://entity/chest/chest_rome.tscn" id="8_6xuvi"]
[ext_resource type="PackedScene" uid="uid://ds7eji5rc71gs" path="res://entity/door/door_right.tscn" id="8_sxj3i"]
[ext_resource type="Script" uid="uid://db3x51addxum0" path="res://level/room/room_transition.gd" id="9_fr1um"]
[ext_resource type="PackedScene" uid="uid://dcg3gmie44c8h" path="res://entity/door/door_down.tscn" id="10_k6gnu"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_k6gnu"]
vertices = PackedVector2Array(-12, -20, 8.1015625, -20, 6.3125, -18.210938, 41.6875, -18.210938, 39.898438, -20, 92, -20, 44.421875, -8, 164, 20, -84, -4, 3.578125, -8, -12, 20, -68, 52, -108, 52, -84, -60, -12, -76, 156, -124, 269.0078, -132, 275.14844, 132, 244, 132, 204, 20, -6, -132, -6, -76, -84, -124, -90, -60, -90, -68, -84, -68, -282, -132, -124, -124, -124, -118, -196, -118, -196, -124, -236, -124, -282, -60, -236, -68, -276, -60, -230, -68, -230, -60, -236, -60, -236, -4, -276, 68, 92, -68, 156, -68, 150, -124, 150, -132, 244, 148, 236, 148, 236, 132, 198, 132, 198, 76, 204, 76, 164, 26, 28, 26, 28, 20, 34.210938, 9.6875, 41.6875, 2.2109375, -12, 124, 92, 124, 92, 132, -74, 138, 122, 132, 122, 138, -74, 108, -68, 108, -108, 58, -180, 58, -180, 52, -220, 108, -214, 108, -214, 138, -282, 138, -282, 68, -220, 52, 6.3125, 2.2109375, 13.7890625, 9.6875, 24, 12.421875)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2), PackedInt32Array(3, 4, 5), PackedInt32Array(6, 3, 5, 7), PackedInt32Array(8, 0, 2, 9, 10, 11, 12), PackedInt32Array(0, 8, 13, 14), PackedInt32Array(15, 16, 17, 18, 19), PackedInt32Array(20, 21, 14, 22), PackedInt32Array(13, 23, 24, 25), PackedInt32Array(14, 13, 25), PackedInt32Array(14, 25, 22), PackedInt32Array(26, 20, 22, 27), PackedInt32Array(27, 28, 29, 30), PackedInt32Array(26, 27, 30), PackedInt32Array(26, 30, 31), PackedInt32Array(32, 26, 31, 33, 34), PackedInt32Array(33, 35, 36, 37), PackedInt32Array(34, 33, 37), PackedInt32Array(34, 37, 38, 39), PackedInt32Array(7, 5, 40, 41, 19), PackedInt32Array(15, 42, 43, 16), PackedInt32Array(18, 44, 45, 46), PackedInt32Array(46, 47, 48, 49), PackedInt32Array(7, 50, 51, 52, 53, 54), PackedInt32Array(55, 56, 57, 58), PackedInt32Array(57, 59, 60, 58), PackedInt32Array(55, 58, 61, 62), PackedInt32Array(10, 55, 62, 11), PackedInt32Array(12, 63, 64, 65), PackedInt32Array(66, 67, 68, 69), PackedInt32Array(66, 69, 70, 39), PackedInt32Array(71, 66, 39, 38), PackedInt32Array(71, 38, 8, 65), PackedInt32Array(12, 65, 8), PackedInt32Array(10, 9, 72), PackedInt32Array(10, 72, 73), PackedInt32Array(52, 10, 73, 74), PackedInt32Array(52, 74, 53), PackedInt32Array(7, 54, 6), PackedInt32Array(18, 46, 49, 19), PackedInt32Array(19, 41, 15)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-296, 56, -288, 56, -288, -48, -296, -48, -296, -176, -112, -176, -112, -144, -48, -144, -48, -176, 280, -176, 288, 168, -296, 168)])
agent_radius = 12.0

[sub_resource type="Resource" id="Resource_fr1um"]
script = ExtResource("9_fr1um")
desired_room_id = &"r01"
transition_key = "right"
metadata/_custom_type_script = "uid://db3x51addxum0"

[sub_resource type="Resource" id="Resource_2n34y"]
script = ExtResource("9_fr1um")
desired_room_id = &"r04"
transition_key = "down"
metadata/_custom_type_script = "uid://db3x51addxum0"

[sub_resource type="Resource" id="Resource_snqhf"]
script = ExtResource("9_fr1um")
desired_room_id = &"r14"
transition_key = "left"
metadata/_custom_type_script = "uid://db3x51addxum0"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fr1um"]
resource_local_to_scene = true
size = Vector2(3, 47)

[sub_resource type="Resource" id="Resource_yni54"]
script = ExtResource("9_fr1um")
desired_room_id = &"r10"
transition_key = "up"
metadata/_custom_type_script = "uid://db3x51addxum0"

[node name="RoomRome02" type="Node2D" unique_id=1159730348 node_paths=PackedStringArray("navigation_region_2D", "enemies_root", "transition_positions")]
y_sort_enabled = true
script = ExtResource("1_2d5rg")
id = &"r02"
navigation_region_2D = NodePath("NavigationRegion2D")
enemies_root = NodePath("NavigationRegion2D")
transition_positions = {
"down": NodePath("TransitionDown"),
"left": NodePath("TransitionLeft"),
"right": NodePath("TransitionRight"),
"up": NodePath("TransitionUp")
}

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="." unique_id=1585188227]
y_sort_enabled = true
navigation_polygon = SubResource("NavigationPolygon_k6gnu")
metadata/_edit_lock_ = true

[node name="ground" type="TileMapLayer" parent="NavigationRegion2D" unique_id=581713093]
z_index = -1
y_sort_enabled = true
texture_filter = 1
tile_map_data = PackedByteArray("AADs//T/AAADABYAAADs//X/AAADABYAAADs//b/AAADABYAAADs//f/AAADABYAAADs//j/AAADABYAAADs//n/AAADABYAAADs//r/AAADABYAAADs//v/AAADABYAAADs//z/AAADABYAAADs//3/AAADABYAAADs//7/AAADABYAAADs////AAADABYAAADs/wAAAAADABYAAADs/wEAAAADABYAAADs/wIAAAADABYAAADs/wMAAAADABYAAADs/wQAAAADABYAAADs/wUAAAADABYAAADs/wYAAAADABYAAADs/wcAAAADABYAAADs/wgAAAADABYAAADs/wkAAAADABYAAADs/woAAAADABYAAADt//T/AAADABYAAADu//T/AAADABYAAADv//T/AAADABYAAADw//T/AAADABYAAADx//T/AAADABYAAADy//T/AAADABYAAADz//T/AAADABYAAAD0//T/AAADABYAAAD1//T/AAADABYAAAD2//T/AAADABYAAAD3//T/AAADABYAAAD4//T/AAADABYAAAD5//T/AAADABYAAAD6//T/AAADABYAAAD7//T/AAADABYAAAD8//T/AAADABYAAAD9//T/AAADABYAAAD+//T/AAADABYAAAD///T/AAADABYAAAAAAPT/AAADABYAAAABAPT/AAADABYAAAACAPT/AAADABYAAAADAPT/AAADABYAAAAEAPT/AAADABYAAAAFAPT/AAADABYAAAAGAPT/AAADABYAAAAHAPT/AAADABYAAAAIAPT/AAADABYAAAAJAPT/AAADABYAAAAKAPT/AAADABYAAAALAPT/AAADABYAAAAMAPT/AAADABYAAAANAPT/AAADABYAAAAOAPT/AAADABYAAAAPAPT/AAADABYAAAAQAPT/AAADABYAAAARAPT/AAADABYAAAASAPT/AAADABYAAAATAPT/AAADABYAAAATAPX/AAADABYAAAATAPb/AAADABYAAAATAPf/AAADABYAAAATAPj/AAADABYAAAATAPn/AAADABYAAAATAPr/AAADABYAAAATAPv/AAADABYAAAATAPz/AAADABYAAAATAP3/AAADABYAAAATAP7/AAADABYAAAATAP//AAADABYAAAATAAAAAAADABYAAAATAAEAAAADABYAAAATAAIAAAADABYAAAATAAMAAAADABYAAAATAAQAAAADABYAAAATAAUAAAADABYAAAATAAYAAAADABYAAAATAAcAAAADABYAAAATAAgAAAADABYAAAATAAkAAAADABYAAAATAAoAAAADABYAAADs/wsAAAADABYAAADt/wsAAAADABYAAADu/wsAAAADABYAAADv/wsAAAADABYAAADw/wsAAAADABYAAADx/wsAAAADABYAAADy/wsAAAADABYAAADz/wsAAAADABYAAAD0/wsAAAADABYAAAD1/wsAAAADABYAAAD2/wsAAAADABYAAAD3/wsAAAADABYAAAD4/wsAAAADABYAAAD5/wsAAAADABYAAAD6/wsAAAADABYAAAD7/wsAAAADABYAAAD8/wsAAAADABYAAAD9/wsAAAADABYAAAD+/wsAAAADABYAAAD//wsAAAADABYAAAAAAAsAAAADABYAAAABAAsAAAADABYAAAACAAsAAAADABYAAAADAAsAAAADABYAAAAEAAsAAAADABYAAAAFAAsAAAADABYAAAAGAAsAAAADABYAAAAHAAsAAAADABYAAAAIAAsAAAADABYAAAAJAAsAAAADABYAAAAKAAsAAAADABYAAAALAAsAAAADABYAAAAMAAsAAAADABYAAAANAAsAAAADABYAAAAOAAsAAAADABYAAAAPAAsAAAADABYAAAAQAAsAAAADABYAAAARAAsAAAADABYAAAASAAsAAAADABYAAAATAAsAAAADABYAAAD4//7/AQABAAEAAAD4//3/AQABAAAAAAD4//z/AAADABYAAAD4//v/AAADABYAAAD4//r/AAADABYAAAD4//n/AAACAAAAAAD4//j/AAADAA0AAAD4//f/AAABAAYAAAD4//b/AAACAAUAAAD4//X/AAACAAQAAAD3//X/AQABAAAAAAD2//X/AQAAAAAAAAD1//X/AAABAAQAAAD0//X/AAACAAQAAADz//X/AAADABIAAADy//X/AAACABIAAADx//X/AAABAAQAAADw//X/AQABAAAAAADv//X/AQAAAAAAAADu//X/AAACAAQAAADt//X/AAACAAcAAADt//b/AAACAAgAAADt//f/AAACAAkAAADt//j/AAADAAMAAADt//n/AAADAAMAAADt//r/AAADAAMAAADt//v/AAADAAMAAADt//z/AAADAAMAAADt/wQAAAADAAMAAADt/wUAAAADAAMAAADt/wYAAAADAAMAAADt/wcAAAADAAMAAADt/wgAAAADAAMAAADt/wkAAAACAAoAAADt/woAAAADABYAAADu/woAAAADABYAAADu/wkAAAABAAAAAADu/wgAAAADAAsAAADu/wcAAAADAAsAAADu/wYAAAADAAsAAADu/wUAAAADAAsAAADu/wQAAAADAAsAAADu/wMAAAADAAsAAADu/wIAAAADAAsAAADu/wEAAAABAAsAAADu////AAADAAsAAADu//7/AAADAAsAAADu//3/AAADAAsAAADu//z/AAADAAsAAADu//v/AAADAAsAAADu//r/AAADAAsAAADu//n/AAADAAsAAADu//j/AAADAAsAAADu//f/AAABAAYAAADu//b/AAACAAUAAADv//b/AQAAAAEAAADv//f/AAABAAYAAADv//j/AAADAAsAAADv//n/AAADAAsAAADv//r/AAADAAsAAADv//v/AAADAAsAAADv//z/AAADAAsAAADv//3/AAADAAsAAADv//7/AAADAAsAAADv////AAADAAsAAADv/wEAAAADAA0AAADv/wIAAAADAAsAAADv/wMAAAADAAsAAADv/wQAAAADAAsAAADv/wUAAAADAAsAAADv/wYAAAADAAsAAADv/wcAAAADAAsAAADv/wgAAAADAAsAAADv/wkAAAABAAAAAADv/woAAAADABYAAADw/woAAAADABYAAADw/wkAAAABAAAAAADw/wgAAAADAAsAAADw/wcAAAABAA0AAADw/wYAAAADAAwAAADw/wUAAAADAAwAAADw/wQAAAADAAwAAADw/wMAAAADAAwAAADw/wIAAAADAAwAAADw/wEAAAABAA4AAADw////AAADAAwAAADw//7/AAADAAwAAADw//3/AAADAAwAAADw//z/AAADAAwAAADw//v/AAADAAwAAADw//r/AAADAAwAAADw//n/AAADAAwAAADw//j/AAABAAwAAADw//f/AAABAAYAAADw//b/AQABAAEAAADx//b/AAABAAUAAADx//f/AAABAAYAAADx//j/AAADAA0AAADx//n/AAADAAsAAADx//r/AAADAAsAAADx//v/AAADAAsAAADx//z/AAADAAsAAADx//3/AAADAAsAAADx//7/AAADAAsAAADx////AAADAAsAAADx/wAAAAADAA0AAADx/wEAAAADAAsAAADx/wIAAAADAAsAAADx/wMAAAADAAsAAADx/wQAAAADAAsAAADx/wUAAAADAAsAAADx/wYAAAADAAsAAADx/wcAAAACAAsAAADx/wgAAAADAAsAAADx/wkAAAABAAAAAADx/woAAAADABYAAADy/woAAAADABYAAADy/wkAAAABAAAAAADy/wgAAAADAAsAAADy/wcAAAADAAsAAADy/wYAAAADAAsAAADy/wUAAAADAAsAAADy/wQAAAADAAsAAADy/wMAAAADAAsAAADy/wIAAAADAAsAAADy/wEAAAADAAsAAADy/wAAAAADAA0AAADy////AAAAAAYAAADy//7/AAAAAAUAAADy//3/AAAAAAQAAADy//z/AAAAAAMAAADy//v/AAAAAAIAAADy//r/AAAAAAEAAADy//n/AAAAAAAAAADy//j/AAADAA0AAADy//f/AAABAAYAAADy//b/AAACABMAAADz//b/AAADABMAAADz//f/AAABAAYAAADz//j/AAADAA0AAADz//n/AAABAAAAAADz//r/AAADABYAAADz//v/AAADABYAAADz//z/AAADABYAAADz//3/AQAAAAAAAADz//7/AQAAAAEAAADz////AAABAAYAAADz/wAAAAADAA0AAADz/wEAAAADAAsAAADz/wIAAAADAAsAAADz/wMAAAADAAsAAADz/wQAAAAAAAAAAADz/wUAAAAAAAEAAADz/wYAAAAAAAIAAADz/wcAAAAAAAMAAADz/wgAAAAAAAMAAADz/wkAAAADAAoAAADz/woAAAADABYAAAD0/woAAAADABYAAAD0/wkAAAADABYAAAD0/wgAAAADABYAAAD0/wcAAAADABYAAAD0/wYAAAADABYAAAD0/wUAAAADABYAAAD0/wQAAAABAAAAAAD0/wMAAAADAAsAAAD0/wIAAAADAAsAAAD0/wEAAAADAAsAAAD0/wAAAAADAA0AAAD0////AAABAAYAAAD0//7/AQABAAEAAAD0//3/AQABAAAAAAD0//z/AAADABYAAAD0//v/AAADABYAAAD0//r/AAADABYAAAD0//n/AAABAAAAAAD0//j/AAADAA0AAAD0//f/AAABAAYAAAD0//b/AAACAAUAAAD1//b/AAABAAUAAAD1//f/AAABAAYAAAD1//j/AAADAA0AAAD1//n/AAACAAAAAAD1//r/AAADABYAAAD1//v/AAADABYAAAD1//z/AAADABYAAAD1//3/AAACAAQAAAD1//7/AAACAAUAAAD1/wQAAAABAAAAAAD1/wUAAAADABYAAAD1/wYAAAADABYAAAD1/wcAAAADABYAAAD1/wgAAAADABYAAAD1/wkAAAADABYAAAD1/woAAAADABYAAAD2/woAAAADABYAAAD2/wkAAAADABYAAAD2/wgAAAADABYAAAD2/wcAAAADABYAAAD2/wYAAAADABYAAAD2/wUAAAADABYAAAD2/wQAAAACAAAAAAD2//7/AAABAAUAAAD2//3/AAABAAQAAAD2//z/AAADABYAAAD2//v/AAADABYAAAD2//r/AAADABYAAAD2//n/AAABAAAAAAD2//j/AAADAA0AAAD2//f/AAABAAYAAAD2//b/AQAAAAEAAAD3//b/AQABAAEAAAD3//f/AAABAAYAAAD3//j/AAADAA0AAAD3//n/AAACAAAAAAD3//r/AAADABYAAAD3//v/AAADABYAAAD3//z/AAADABYAAAD3//3/AQAAAAAAAAD3//7/AQAAAAEAAAD3/wQAAAABAAAAAAD3/wUAAAADABYAAAD3/wYAAAADABYAAAD3/wcAAAADABYAAAD3/wgAAAADABYAAAD3/wkAAAADABYAAAD3/woAAAADABYAAAD4/woAAAADABYAAAD4/wkAAAADABYAAAD4/wgAAAADABYAAAD4/wcAAAADABYAAAD4/wYAAAADABYAAAD4/wUAAAADABYAAAD4/wQAAAACAAAAAAD5//7/AAADAAUAAAD5//3/AAADAAQAAAD5//z/AAADAAMAAAD5//v/AAADAAIAAAD5//r/AAADAAEAAAD5//n/AAADAAAAAAD5//j/AAADAA0AAAD5//f/AAADAAYAAAD5//b/AAADAAUAAAD5//X/AAADAAQAAAD6//X/AAADAAsAAAD6//b/AAADAAsAAAD6//f/AAADAAsAAAD6//j/AAADAA0AAAD6//n/AAADAAsAAAD6//r/AAADAAsAAAD6//v/AAADAAsAAAD6//z/AAADAAsAAAD6//3/AAADAAsAAAD6//7/AAADAAsAAAD5/wQAAAACAAAAAAD5/wUAAAADABYAAAD5/wYAAAADABYAAAD5/wcAAAADABYAAAD5/wgAAAADABYAAAD5/wkAAAADABYAAAD5/woAAAADABYAAAD6/woAAAADABYAAAD6/wkAAAACAAoAAAD6/wgAAAADAAMAAAD6/wcAAAADAAMAAAD6/wYAAAADAAIAAAD6/wUAAAADAAEAAAD6/wQAAAADAAAAAAD7//7/AAADAAsAAAD7//3/AAADAAsAAAD7//z/AAADAAsAAAD7//v/AAADAAsAAAD7//r/AAADAAsAAAD7//n/AAADAAsAAAD7//j/AAADAA0AAAD7//f/AAADAAsAAAD7//b/AAADAAsAAAD7//X/AAADAAsAAAD8//X/AAAAAAQAAAD8//b/AAAAAAUAAAD8//f/AAAAAAYAAAD8//j/AAADAA0AAAD8//n/AAADAAsAAAD8//r/AAADAAsAAAD8//v/AAADAAsAAAD8//z/AAADAAsAAAD8//3/AAADAAsAAAD8//7/AAADAAsAAAD7/wQAAAADAAsAAAD7/wUAAAADAAsAAAD7/wYAAAADAAsAAAD7/wcAAAADAAsAAAD7/wgAAAADAAsAAAD7/wkAAAABAAAAAAD7/woAAAADABYAAAD8/woAAAADABYAAAD8/wkAAAABAAAAAAD8/wgAAAADAAsAAAD8/wcAAAADAAsAAAD8/wYAAAADAAsAAAD8/wUAAAADAAsAAAD8/wQAAAADAAsAAAD9/wQAAAADAAwAAAD9//7/AAADAAwAAAD9//3/AAADAAwAAAD9//z/AAADAAwAAAD9//v/AAADAAwAAAD9//r/AAADAAwAAAD9//n/AAADAAwAAAD9//j/AAACAAwAAAD9//f/AAABAAYAAAD9//b/AQAAAAEAAAD9//X/AQAAAAAAAAD+//X/AQABAAAAAAD+//b/AQABAAEAAAD+//f/AAABAAYAAAD+//j/AAADAAsAAAD+//n/AAADAAsAAAD+//r/AAADAAsAAAD+//v/AAADAAsAAAD+//z/AAADAAsAAAD+//3/AAADAAsAAAD+//7/AAADAAsAAAD+/wQAAAADAAsAAAD+/wUAAAADAAsAAAD9/wUAAAADAAwAAAD9/wYAAAADAAwAAAD9/wcAAAADAAwAAAD9/wgAAAABAA0AAAD9/wkAAAABAAAAAAD9/woAAAADABYAAAD+/woAAAADABYAAAD+/wkAAAABAAAAAAD+/wgAAAADAA0AAAD+/wcAAAADAAsAAAD+/wYAAAADAAsAAAD//wYAAAADAAsAAAD//wUAAAADAAsAAAD//wQAAAADAAsAAAD///7/AAADAAsAAAD///3/AAADAAsAAAD///z/AAADAAsAAAD///v/AAADAAsAAAD///r/AAADAAsAAAD///n/AAADAAsAAAD///j/AAADAAsAAAD///f/AAABAAYAAAD///b/AAABAAUAAAD///X/AAABAAQAAAAAAPX/AAADAAcAAAAAAPb/AAADAAgAAAAAAPf/AAADAAkAAAAAAPj/AAAAAAMAAAAAAPn/AAAAAAMAAAAAAPr/AAAAAAMAAAAAAPv/AAAAAAMAAAAAAPz/AAAAAAQAAAAAAP3/AAAAAAUAAAAAAP7/AAAAAAYAAAAAAAQAAAAAAAIAAAAAAAUAAAAAAAQAAAAAAAYAAAAAAAUAAAAAAAcAAAAAAAYAAAD//wcAAAADAAsAAAD//wgAAAADAA0AAAD//wkAAAABAAAAAAD//woAAAADABYAAAAAAAoAAAADABYAAAAAAAkAAAABAAAAAAAAAAgAAAADAA0AAAABAAgAAAADAA0AAAABAAcAAAABAAYAAAABAAYAAQAAAAEAAAABAAUAAQAAAAAAAAABAAQAAAADABYAAAABAAMAAAADABYAAAABAAIAAAABAAAAAAABAAEAAAADAAsAAAABAAAAAAADAA0AAAABAP//AAADAAsAAAABAP7/AAABAAYAAAABAP3/AAABAAUAAAABAPz/AAABAAQAAAABAPv/AAADABYAAAABAPr/AAADABYAAAABAPn/AAADABYAAAABAPj/AAADABYAAAABAPf/AAADABYAAAABAPb/AAADABYAAAABAPX/AAADABYAAAACAPX/AAADABYAAAACAPb/AAADABYAAAACAPf/AAADABYAAAACAPj/AAADABYAAAACAPn/AAADABYAAAACAPr/AAADABYAAAACAPv/AAADABYAAAACAPz/AQAAAAAAAAACAP3/AQAAAAEAAAACAP7/AAABAAYAAAACAP//AAADAAsAAAACAAAAAAADAA0AAAACAAEAAAADAAsAAAACAAIAAAABAAAAAAACAAMAAAADABYAAAACAAQAAAADABYAAAACAAUAAQABAAAAAAACAAYAAQABAAEAAAACAAcAAAABAAYAAAACAAgAAAADAA0AAAACAAkAAAABAAAAAAABAAkAAAABAAAAAAABAAoAAAADABYAAAACAAoAAAADABYAAAADAAoAAAADABYAAAADAAkAAAACAAAAAAADAAgAAAADAA0AAAADAAcAAAACAAYAAAADAAYAAAACAAUAAAADAAUAAAACAAQAAAADAAQAAAADABYAAAADAAMAAAADABYAAAADAAIAAAACAAAAAAADAAEAAAADAAsAAAADAAAAAAADAA0AAAADAP//AAADAAsAAAADAP7/AAACAAYAAAADAP3/AQABAAEAAAADAPz/AQABAAAAAAADAPv/AAADABYAAAADAPr/AAADABYAAAADAPn/AAADABYAAAADAPj/AAADABYAAAADAPf/AAADABYAAAADAPb/AAADABYAAAADAPX/AAADABYAAAAEAPX/AAADABYAAAAEAPb/AAADABYAAAAEAPf/AAADABYAAAAEAPj/AAADABYAAAAEAPn/AAACAAcAAAAEAPr/AAACAAgAAAAEAPv/AAACAAkAAAAEAPz/AAADAAQAAAAEAP3/AAADAAUAAAAEAP7/AAADAAYAAAAEAP//AAADAAsAAAAEAAAAAAADAA0AAAAEAAEAAAADAAsAAAAEAAIAAAABAAAAAAAEAAMAAAADABYAAAAEAAQAAAADABYAAAAEAAUAAAABAAQAAAAEAAYAAAABAAUAAAAEAAcAAAABAAYAAAAEAAgAAAADAA0AAAAEAAkAAAABAAAAAAAEAAoAAAADABYAAAAFAAoAAAADABYAAAAFAAkAAAABAAAAAAAFAAgAAAADAA0AAAAFAAcAAAACAAYAAAAFAAYAAAACABMAAAAFAAUAAAACABIAAAAFAAQAAAADABYAAAAFAAMAAAADABYAAAAFAAIAAAACAAAAAAAFAAEAAAADAAsAAAAFAAAAAAADAA0AAAAFAP//AAADAAsAAAAFAP7/AAADAAsAAAAFAP3/AAADAAsAAAAFAPz/AAADAAsAAAAFAPv/AAABAAYAAAAFAPr/AQAAAAEAAAAFAPn/AQAAAAAAAAAFAPj/AAADABYAAAAFAPf/AAADABYAAAAFAPb/AAADABYAAAAFAPX/AAADABYAAAAGAPX/AAADABYAAAAGAPb/AAADABYAAAAGAPf/AAADABYAAAAGAPj/AAADABYAAAAGAPn/AQABAAAAAAAGAPr/AQABAAEAAAAGAPv/AAACAAYAAAAGAPz/AAADAAsAAAAGAP3/AAADAAsAAAAGAP7/AAADAAsAAAAGAP//AAADAAsAAAAGAAAAAAADAA0AAAAGAAEAAAADAAsAAAAGAAIAAAABAAAAAAAGAAMAAAADABYAAAAGAAQAAAADABYAAAAGAAUAAAADABIAAAAGAAYAAAADABMAAAAGAAcAAAABAAYAAAAGAAgAAAACAAsAAAAGAAkAAAABAAAAAAAGAAoAAAADABYAAAAHAAoAAAADABYAAAAHAAkAAAABAAAAAAAHAAgAAAADAAsAAAAHAAcAAAACAAYAAAAHAAYAAAACAAUAAAAHAAUAAAACAAQAAAAHAAQAAAADABYAAAAHAAMAAAADABYAAAAHAAIAAAACAAAAAAAHAAEAAAADAAsAAAAHAAAAAAADAA0AAAAHAP//AAADAAsAAAAHAP7/AAADAAsAAAAHAP3/AAADAAsAAAAHAPz/AAADAAsAAAAHAPv/AAACAAYAAAAHAPr/AAACAAUAAAAHAPn/AAACAAQAAAAHAPj/AAADABYAAAAHAPf/AAADABYAAAAHAPb/AAADABYAAAAHAPX/AAADABYAAAAIAPX/AAACAAcAAAAIAPb/AAACAAgAAAAIAPf/AAACAAkAAAAIAPj/AAADAAMAAAAIAPn/AAADAAQAAAAIAPr/AAADAAUAAAAIAPv/AAADAAYAAAAIAPz/AAADAAsAAAAIAP3/AAADAAsAAAAIAP7/AAADAAsAAAAIAP//AAADAAsAAAAIAAAAAAADAA0AAAAIAAEAAAADAAsAAAAIAAIAAAABAAAAAAAIAAMAAAADABYAAAAIAAQAAAADABYAAAAIAAUAAAADAAcAAAAIAAYAAAADAAgAAAAIAAcAAAADAAkAAAAIAAgAAAAAAAMAAAAIAAkAAAADAAoAAAAIAAoAAAADABYAAAAJAAoAAAADABYAAAAJAAkAAAADABYAAAAJAAgAAAADABYAAAAJAAcAAAADABYAAAAJAAYAAAADABYAAAAJAAUAAAADABYAAAAJAAQAAAADABYAAAAJAAMAAAADABYAAAAJAAIAAAACAAAAAAAJAAEAAAADAAsAAAAJAAAAAAADAA0AAAAJAP//AAADAAsAAAAJAP7/AAADAAsAAAAJAP3/AAADAAsAAAAJAPz/AAADAAsAAAAJAPv/AAADAAsAAAAJAPr/AAADAAsAAAAJAPn/AAADAAsAAAAJAPj/AAADAAsAAAAJAPf/AAABAAYAAAAJAPb/AAABAAUAAAAJAPX/AAABAAQAAAAKAPX/AAACAAQAAAAKAPb/AAACAAUAAAAKAPf/AAABAAYAAAAKAPj/AAABAAsAAAAKAPn/AAADAAsAAAAKAPr/AAADAAsAAAAKAPv/AAADAAsAAAAKAPz/AAADAAsAAAAKAP3/AAADAAsAAAAKAP7/AAADAAsAAAAKAP//AAADAAsAAAAKAAAAAAADAA0AAAAKAAEAAAADAAsAAAAKAAIAAAACAAAAAAAKAAMAAAADABYAAAAKAAQAAAADABYAAAAKAAUAAAADABYAAAAKAAYAAAADABYAAAAKAAcAAAADABYAAAAKAAgAAAADABYAAAAKAAkAAAADABYAAAAKAAoAAAADABYAAAALAAoAAAADABYAAAALAAkAAAACAAoAAAALAAgAAAADAAMAAAALAAcAAAADAAMAAAALAAYAAAADAAMAAAALAAUAAAADAAMAAAALAAQAAAADAAIAAAALAAMAAAADAAEAAAALAAIAAAADAAAAAAALAAEAAAADAAsAAAALAAAAAAADAA0AAAALAP//AAADAAsAAAALAP7/AAADAAsAAAALAP3/AAADAAsAAAALAPz/AAADAAsAAAALAPv/AAADAAsAAAALAPr/AAADAAsAAAALAPn/AAADAAsAAAALAPj/AAADAA0AAAALAPf/AAABAAYAAAALAPb/AAACABMAAAALAPX/AAACABIAAAAMAPX/AAADABIAAAAMAPb/AAADABMAAAAMAPf/AAABAAYAAAAMAPj/AAADAA0AAAAMAPn/AAADAAsAAAAMAPr/AAADAAsAAAAMAPv/AAADAAsAAAAMAPz/AAADAAsAAAAMAP3/AAADAAsAAAAMAP7/AAADAAsAAAAMAP//AAADAAsAAAAMAAAAAAADAA0AAAAMAAEAAAADAAsAAAAMAAoAAAADABYAAAANAAoAAAADABYAAAANAAkAAAADAAAAAAANAAgAAAADAAsAAAANAAcAAAADAAsAAAANAAYAAAADAAsAAAANAAUAAAADAAsAAAANAAQAAAADAAsAAAANAAMAAAADAAsAAAANAAIAAAADAAsAAAANAAEAAAADAAsAAAANAAAAAAADAA0AAAANAP//AAADAAsAAAANAP7/AAADAAsAAAANAP3/AAADAAsAAAANAPz/AAADAAsAAAANAPv/AAADAAsAAAANAPr/AAADAAsAAAANAPn/AAADAAsAAAANAPj/AAADAA0AAAANAPf/AAABAAYAAAANAPb/AAABAAUAAAANAPX/AAABAAQAAAAOAPX/AAACAAQAAAAOAPb/AAACAAUAAAAOAPf/AAABAAYAAAAOAPj/AAADAA0AAAAOAPn/AAADAAsAAAAOAPr/AAADAAsAAAAOAPv/AAADAAsAAAAOAPz/AAADAAsAAAAOAP3/AAADAAsAAAAOAP7/AAADAAsAAAAOAP//AAADAAsAAAAOAAAAAAADAA0AAAAOAAEAAAADAAsAAAAOAAIAAAADAAsAAAAOAAMAAAADAAsAAAAOAAQAAAADAAsAAAAOAAUAAAADAAsAAAAOAAYAAAADAAsAAAAOAAcAAAADAAsAAAAOAAgAAAADAAsAAAAOAAkAAAADAAsAAAAOAAoAAAADABYAAAAPAAoAAAADABYAAAAPAAkAAAADAAsAAAAPAAgAAAAAAA0AAAAPAAcAAAADAAwAAAAPAAYAAAADAAwAAAAPAAUAAAADAAwAAAAPAAQAAAADAAwAAAAPAAMAAAADAAwAAAAPAAIAAAADAAwAAAAPAAEAAAADAAwAAAAPAAAAAAAAAAsAAAAPAP//AAADAAwAAAAPAP7/AAADAAwAAAAPAP3/AAADAAwAAAAPAPz/AAADAAwAAAAPAPv/AAADAAwAAAAPAPr/AAADAAwAAAAPAPn/AAADAAwAAAAPAPj/AAACAAwAAAAPAPf/AAABAAYAAAAPAPb/AQAAAAEAAAAPAPX/AQAAAAAAAAAQAPX/AQABAAAAAAAQAPb/AQABAAEAAAAQAPf/AAABAAYAAAAQAPj/AAADAAsAAAAQAPn/AAADAAsAAAAQAPr/AAADAAsAAAAQAPv/AAADAAsAAAAQAPz/AAADAAsAAAAQAP3/AAADAAsAAAAQAP7/AAADAAsAAAAQAP//AAADAAsAAAAQAAAAAAACAAsAAAAQAAEAAAADAAsAAAAQAAIAAAADAAsAAAAQAAMAAAADAAsAAAAQAAQAAAADAAsAAAAQAAUAAAADAAsAAAAQAAYAAAADAAsAAAAQAAcAAAADAAsAAAAQAAgAAAADAAsAAAAQAAkAAAAAAAAAAAAQAAoAAAADABYAAAARAAoAAAADABYAAAARAAkAAAABAAAAAAARAAgAAAADAAsAAAARAAcAAAADAAsAAAARAAYAAAADAAsAAAARAAUAAAADAAsAAAARAAQAAAADAAsAAAARAAMAAAADAAsAAAARAAIAAAADAAsAAAARAAEAAAADAAsAAAARAAAAAAADAAsAAAARAP//AAADAAsAAAARAP7/AAADAAsAAAARAP3/AAADAAsAAAARAPz/AAADAAsAAAARAPv/AAADAAsAAAARAPr/AAADAAsAAAARAPn/AAADAAsAAAARAPj/AAADAAsAAAARAPf/AAABAAYAAAARAPb/AAABAAUAAAARAPX/AAABAAQAAAASAPX/AAADAAcAAAASAPb/AAADAAgAAAASAPf/AAADAAkAAAASAPj/AAAAAAMAAAASAPn/AAAAAAMAAAASAPr/AAAAAAMAAAASAPv/AAAAAAMAAAASAPz/AAAAAAMAAAASAP3/AAAAAAMAAAASAP7/AAAAAAMAAAASAP//AAAAAAMAAAASAAAAAAAAAAMAAAASAAEAAAAAAAMAAAASAAIAAAAAAAMAAAASAAMAAAADAAsAAAASAAQAAAADAAsAAAASAAUAAAAAAAMAAAASAAYAAAAAAAMAAAASAAcAAAAAAAMAAAASAAgAAAAAAAMAAAASAAkAAAADAAoAAAASAAoAAAADABYAAAD1////AAACAAYAAAD1/wAAAAADAA0AAAD1/wEAAAADAAsAAAD1/wIAAAADAAsAAAD1/wMAAAADAAsAAAD2////AAABAAYAAAD2/wAAAAADAA0AAAD2/wEAAAADAAsAAAD2/wIAAAADAAsAAAD2/wMAAAADAAsAAAD3////AAACAAYAAAD3/wAAAAADAA0AAAD3/wEAAAADAAsAAAD3/wIAAAADAAsAAAD3/wMAAAADAAsAAAD4////AAACAAYAAAD4/wAAAAADAA0AAAD4/wEAAAADAAsAAAD4/wIAAAADAAsAAAD4/wMAAAADAAsAAAD5////AAADAAYAAAD5/wAAAAADAA0AAAD5/wEAAAADAAsAAAD5/wIAAAADAAsAAAD5/wMAAAADAAsAAAD6////AAADAAsAAAD6/wAAAAADAA0AAAD6/wEAAAADAAsAAAD6/wIAAAADAAsAAAD6/wMAAAADAAsAAAD7////AAADAAsAAAD7/wAAAAADAA0AAAD7/wEAAAADAAsAAAD7/wIAAAADAAsAAAD7/wMAAAADAAsAAAD8////AAADAAsAAAD8/wAAAAADAA0AAAD8/wEAAAADAAsAAAD8/wIAAAADAAsAAAD8/wMAAAADAAsAAAD9////AAADAAwAAAD9/wAAAAAAAAsAAAD9/wEAAAADAAwAAAD9/wIAAAADAAwAAAD9/wMAAAADAAwAAAD+////AAADAAsAAAD+/wAAAAADAA0AAAD+/wEAAAADAAsAAAD+/wIAAAADAAsAAAD+/wMAAAADAAsAAAD/////AAADAAsAAAD//wAAAAADAA0AAAD//wEAAAADAAsAAAD//wIAAAADAAsAAAD//wMAAAADAAsAAAAAAP//AAADAAsAAAAAAAAAAAADAA0AAAAAAAEAAAADAAsAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAEAAADt/wMAAAADAAIAAADt/wEAAAADAAAAAADt/wIAAAADAAEAAADw/wAAAAAAAA4AAADu/wAAAAADAAsAAADv/wAAAAADAAsAAADt//3/AAADAAQAAADt//7/AAADAAUAAADt////AAADAAYAAADt/wAAAAADAAsAAAAMAAkAAAABAAAAAAAMAAIAAAADAAsAAAAMAAMAAAADAAsAAAAMAAQAAAADAAsAAAAMAAUAAAADAAsAAAAMAAgAAAADAAsAAAAMAAcAAAADAAsAAAAMAAYAAAADAAsAAAA=")
tile_set = ExtResource("2_6xuvi")
navigation_enabled = false
metadata/_edit_lock_ = true

[node name="TorchPointLight2D" parent="NavigationRegion2D/ground" unique_id=2134423098 instance=ExtResource("2_j55g4")]
position = Vector2(-256, -156)

[node name="TorchPointLight2D2" parent="NavigationRegion2D/ground" unique_id=135152726 instance=ExtResource("2_j55g4")]
position = Vector2(-144, -156)

[node name="TorchPointLight2D3" parent="NavigationRegion2D/ground" unique_id=139585033 instance=ExtResource("2_j55g4")]
position = Vector2(-32, -156)

[node name="TorchPointLight2D4" parent="NavigationRegion2D/ground" unique_id=595130052 instance=ExtResource("2_j55g4")]
position = Vector2(48, -44)

[node name="TorchPointLight2D5" parent="NavigationRegion2D/ground" unique_id=399559288 instance=ExtResource("2_j55g4")]
position = Vector2(96, -92)

[node name="TorchPointLight2D6" parent="NavigationRegion2D/ground" unique_id=640079414 instance=ExtResource("2_j55g4")]
position = Vector2(256, -156)

[node name="TorchPointLight2D7" parent="NavigationRegion2D/ground" unique_id=690714780 instance=ExtResource("2_j55g4")]
position = Vector2(32, 100)

[node name="TorchPointLight2D8" parent="NavigationRegion2D/ground" unique_id=1632603745 instance=ExtResource("2_j55g4")]
position = Vector2(-128, -28)

[node name="TorchPointLight2D9" parent="NavigationRegion2D/ground" unique_id=1970181712 instance=ExtResource("2_j55g4")]
position = Vector2(-192, -28)

[node name="Chest3" parent="NavigationRegion2D" unique_id=1983694076 instance=ExtResource("8_6xuvi")]
position = Vector2(112, 120)

[node name="zemerlin" parent="NavigationRegion2D" unique_id=962200678 instance=ExtResource("3_j55g4")]
position = Vector2(216, 104)

[node name="zemerlin2" parent="NavigationRegion2D" unique_id=1714473981 instance=ExtResource("3_j55g4")]
position = Vector2(168, -96)

[node name="zemerlin3" parent="NavigationRegion2D" unique_id=2011688048 instance=ExtResource("3_j55g4")]
position = Vector2(56, 136)

[node name="Medusa" parent="NavigationRegion2D" unique_id=1015857052 instance=ExtResource("6_te4wc")]
position = Vector2(24, 8)

[node name="BreakableWallSide" parent="." unique_id=575424913 node_paths=PackedStringArray("desired_door") instance=ExtResource("5_k6nox")]
position = Vector2(288, 64)
desired_door = NodePath("../DoorRight")

[node name="DoorLeft" parent="." unique_id=930462426 instance=ExtResource("7_2d5rg")]
position = Vector2(-304, 0)
room_transition = SubResource("Resource_fr1um")

[node name="DoorFront" parent="." unique_id=1173705178 instance=ExtResource("5_j55g4")]
position = Vector2(-80, -144)
room_transition = SubResource("Resource_2n34y")

[node name="DoorRight" parent="." unique_id=1055008288 instance=ExtResource("8_sxj3i")]
position = Vector2(288, 64)
room_transition = SubResource("Resource_snqhf")
always_open = true
secret_door = true

[node name="DoorLayer" parent="DoorRight" index="0"]
visible = false

[node name="AreaCollisionShape2D" parent="DoorRight" index="1"]
shape = SubResource("RectangleShape2D_fr1um")

[node name="DoorDown" parent="." unique_id=947680976 instance=ExtResource("10_k6gnu")]
position = Vector2(240, 160)
room_transition = SubResource("Resource_yni54")

[node name="TransitionLeft" type="Marker2D" parent="." unique_id=1498278808]
position = Vector2(-280, 8)

[node name="TransitionUp" type="Marker2D" parent="." unique_id=2045907379]
position = Vector2(-80, -128)

[node name="TransitionDown" type="Marker2D" parent="." unique_id=1811070367]
position = Vector2(240, 136)

[node name="TransitionRight" type="Marker2D" parent="." unique_id=1120763657]
position = Vector2(272, 80)

[editable path="DoorRight"]
